--- a/style.css
+++ b/style.css
@@ -763,8 +763,8 @@ main::after {
     font-size: 0.9rem;
     line-height: 1.5;
     text-align: justify;
-    padding: 0;
-    margin: 0;
+    padding: 0!important;
+    margin: 0!important;
   }
 
   .card-icon {
