--- a/style.css
+++ b/style.css
@@ -741,9 +741,9 @@ main::after {
 
   .about-intro {
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 0.5;
     text-align: center;
-    margin: 0 -50px;
+    /* margin: 0 -50px; */
   }
 
   .map {
