--- a/style.css
+++ b/style.css
@@ -742,7 +742,7 @@ main::after {
   .about-intro {
     font-size: 1rem;
     line-height: 0.5;
-    text-align: center;
+    text-align: justify;
     /* margin: 0 -50px; */
   }
 
