--- a/style.css
+++ b/style.css
@@ -741,8 +741,8 @@ main::after {
 
   .about-intro {
     font-size: 1rem;
-    line-height: 0.5;
-    text-align: justify;
+    /* line-height: 0.2; */
+    text-align: center;
     /* margin: 0 -50px; */
   }
 
