--- a/style.css
+++ b/style.css
@@ -739,14 +739,14 @@ main::after {
     font-size: 2rem;
   }
 
-  .about-intro {
+  /* .about-intro {
     font-size: 1rem;
     line-height: 1;
     width: 100%;
     margin: 0 auto;
     text-align: center;
     /* margin: 0 -50px; */
-  }
+  /* //} */ */
 
   .map {
     flex-direction: column;
