--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ body {
   margin-top: 20px;
   font-size: clamp(1.5rem, 2.5vw, 2.2rem);
   color: #ffffff;
+  font-family: abc;
+  font-weight: 800;
   text-shadow: 0 0 15px rgba(255, 217, 0, 0.952), 0 0 25px rgba(245, 245, 245, 0.822);
   /* Cyan and pink shadow */
   /* animation: glowPulse 2s ease-in-out infinite alternate; */
