--- a/style.css
+++ b/style.css
@@ -1364,7 +1364,7 @@ main::after {
     font-size: 20px;
   }
 
-  .social-icon i {
+  .social-icon a i {
     height: 35px;
     width: 35px;
     font-size: 18px;
