--- a/style.css
+++ b/style.css
@@ -245,6 +245,9 @@ header {
 .offcanvas {
   backdrop-filter: blur(10px);
 }
+.tog .social-icon a {
+  text-decoration: none;
+}
 
 .tog i {
   font-size: 30px;
@@ -1368,7 +1371,7 @@ main::after {
     height: 35px;
     width: 35px;
     font-size: 18px;
-   text-decoration: none!important;
+   
   }
 
   .btn-close {
