--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ header {
 .offcanvas {
   backdrop-filter: blur(10px);
 }
-.tog .social-icon a {
+.social-icon a {
   text-decoration: none;
 }
 
