--- a/style.css
+++ b/style.css
@@ -1360,8 +1360,9 @@ main::after {
   }
 
   .tog {
-    height: 30px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    left: 20px;
   }
 
   .tog i {
