--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ main::after {
 }
 .btnpart{
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   gap: 20px;
 }
