--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
 .loader-title {
   margin-top: 20px;
   font-size: clamp(1.5rem, 2.5vw, 2.2rem);
-  color: rgba(245, 245, 245, 0.822)fff;
+  color: #fff;
   font-family: abc;
   font-weight: 800;
   text-shadow: 0 0 15px rgba(255, 217, 0, 0.952), 0 0 25px rgba(245, 245, 245, 0.822);
